fix(bainistigh): get the arrow on the new_article_button aligned

--- a/apps/bainistigh/assets/css/components/wiki/_new_article_button.scss
+++ b/apps/bainistigh/assets/css/components/wiki/_new_article_button.scss
@@ -123,7 +123,7 @@
       inline-size: 0;
       left: 0;
       position: absolute;
-      transform: translate(-12px, 18px);
+      transform: translate(-8px, 18px);
       top: 0;
     }
   }
